# Fable2Recomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  Fable-2_config.toml  Fable2Recomp.sln  Fable2Recomp.vcxproj  Fable2Recomp.vcxproj.filters  Fable2_config.toml  LICENSE  README.md  config.toml  fable2.toml  ppc  vcpkg.json
Fable2Recomp/: CMakeLists.txt  Fable2Recomp.cpp  data_loader.cpp  main.cpp  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.100.cpp  ppc_recomp.101.cpp  ppc_recomp.102.cpp  ppc_recomp.103.cpp  ppc_recomp.104.cpp  ppc_recomp.105.cpp  ppc_recomp.106.cpp  ppc_recomp.107.cpp  ppc_recomp.108.cpp  ppc_recomp.109.cpp  ppc_recomp.11.cpp  ppc_recomp.110.cpp  ppc_recomp.111.cpp  ppc_recomp.112.cpp  ppc_recomp.113.cpp  ppc_recomp.114.cpp  ppc_recomp.115.cpp  ppc_recomp.116.cpp  ppc_recomp.117.cpp  ppc_recomp.118.cpp  ppc_recomp.119.cpp  ppc_recomp.12.cpp  ppc_recomp.120.cpp  ppc_recomp.121.cpp  ppc_recomp.122.cpp  ppc_recomp.123.cpp  ppc_recomp.124.cpp  ppc_recomp.125.cpp  ppc_recomp.126.cpp  ppc_recomp.127.cpp  ppc_recomp.128.cpp  ppc_recomp.129.cpp  (+325 more)
Fable2Recomp/api/: SWA.inl
Fable2Recomp/assets/: test_bank_1.bnk  test_bank_2.bnk
Fable2Recomp/assets/src/: assets.cpp  assets.h  assets_model.cpp  assets_model.h  assets_script.cpp  assets_script.h  assets_shader.cpp  assets_shader.h  assets_texture.cpp  assets_texture.h
Fable2Recomp/cpu/: ppc_decoder.cpp  ppc_decoder.h  ppc_integration.cpp  ppc_recomp.h
Fable2Recomp/gpu/: CMakeLists.txt  gpu.cpp  gpu.h  video.cpp  video.h
Fable2Recomp/gpu/rhi/: vulkan_render_device.cpp
Fable2Recomp/gpu/shader/: CMakeLists.txt  copy_color_ps.hlsl  copy_common.hlsli  copy_vs.hlsl  gaussian_blur_3x3.hlsl  imgui_common.hlsli  resolve_msaa_color.hlsli  resolve_msaa_color_4x.hlsl
Fable2Recomp/hid/: CMakeLists.txt
Fable2Recomp/include/: stdafx.h  xbox.h  xbox_types.h
Fable2Recomp/kernel/: kernel.cpp  kernel.h
Fable2Recomp/os/: logger.cpp
Fable2Recomp/patches/: CMakeLists.txt  inspire_patches.h  memory_patches.h  patches.cpp
Fable2Recomp/ppc/: pch.h  ppc_config.h  ppc_context.h  ppc_recomp.0.cpp  ppc_recomp.10.cpp  ppc_recomp.101.cpp  ppc_recomp.105.cpp  ppc_recomp.106.cpp  ppc_recomp.107.cpp  ppc_recomp.108.cpp  ppc_recomp.109.cpp  ppc_recomp.11.cpp  ppc_recomp.111.cpp  ppc_recomp.114.cpp  ppc_recomp.117.cpp  ppc_recomp.118.cpp  ppc_recomp.12.cpp  ppc_recomp.120.cpp  ppc_recomp.121.cpp  ppc_recomp.122.cpp  ppc_recomp.123.cpp  ppc_recomp.124.cpp  ppc_recomp.125.cpp  ppc_recomp.126.cpp  ppc_recomp.128.cpp  ppc_recomp.129.cpp  ppc_recomp.13.cpp  ppc_recomp.131.cpp  ppc_recomp.132.cpp  ppc_recomp.133.cpp  ppc_recomp.134.cpp  ppc_recomp.135.cpp  ppc_recomp.136.cpp  ppc_recomp.137.cpp  ppc_recomp.138.cpp  ppc_recomp.14.cpp  ppc_recomp.141.cpp  ppc_recomp.143.cpp  ppc_recomp.144.cpp  ppc_recomp.145.cpp  (+116 more)
Fable2Recomp/src/: CMakeLists.txt  CMakeLists.windows.txt  data_loader.cpp  main.cpp  stdafx.h
Fable2Recomp/tests/: CMakeLists.txt
Fable2Recomp/ui/: CMakeLists.txt  black_bar.h  fader.h  message_window.h  ui.cpp  ui.h
Fable2Recomp/vfs/: asset_manager.hpp  asset_types.cpp  vfs.cpp  vfs.h
src/: CMakeLists.txt  data_loader.cpp  data_loader.h  exports.cpp  heap.cpp  heap.h  hooks.cpp  logger.cpp  logger.h  main.cpp  misc_impl.cpp  preload_executable.cpp  sdl_events.h  sdl_listener.cpp  sdl_listener.h  stdafx.h
src/apu/: audio.cpp  audio.h
src/assets/: CMakeLists.txt  assets.cpp  assets_model.cpp  assets_shader.cpp  assets_texture.cpp
src/backends/: CMakeLists.txt
src/base/: CMakeLists.txt
src/cpu/: CMakeLists.txt  guest_thread.cpp  ppc_integration.cpp  ppc_integration.h  ppc_recomp.cpp  ppc_recomp.h
src/gpu/: CMakeLists.txt  Untitled Document  gpu.cpp  gpu.hpp  video.cpp  video.h  video_vulkan.cpp  video_vulkan.h  vulkan_renderer.cpp
src/hid/: hid.cpp  hid.h
src/hooks/: ring_buffer.cpp
src/include/: data_loader.h  stdafx.h
src/install/: installer.cpp  installer.h  iso_file_system.cpp  iso_file_system.h  virtual_file_system.h  xcontent_file_system.cpp  xcontent_file_system.h
src/kernel/: CMakeLists.txt  critical_section_patch.cpp  critical_section_patch.h  function.h  heap.cpp  heap.h  imports.cpp  imports.h  kernel.cpp  kernel_constants.h  memory.cpp  memory.h  xam.cpp  xam.h  xdbf.h  xdm.h
src/locale/: config_locale.cpp  locale.cpp  locale.h
src/os/: CMakeLists.txt  logger.cpp  logger.h  os.cpp  os.h  process.h  version.h
src/patches/: memory_patches.cpp  memory_patches.h  patches.cpp
src/ppc/: CMakeLists.txt  ppc_compiler.h  ppc_config.h  ppc_context.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.000.cpp  ppc_recomp.001.cpp  ppc_recomp.002.cpp  ppc_recomp.003.cpp  ppc_recomp.004.cpp  ppc_recomp.005.cpp  ppc_recomp.006.cpp  ppc_recomp.007.cpp  ppc_recomp.009.cpp  ppc_recomp.010.cpp  ppc_recomp.011.cpp  ppc_recomp.012.cpp  ppc_recomp.013.cpp  ppc_recomp.014.cpp  ppc_recomp.015.cpp  ppc_recomp.016.cpp  ppc_recomp.017.cpp  ppc_recomp.018.cpp  ppc_recomp.019.cpp  ppc_recomp.020.cpp  ppc_recomp.021.cpp  ppc_recomp.022.cpp  ppc_recomp.023.cpp  ppc_recomp.024.cpp  ppc_recomp.025.cpp  ppc_recomp.026.cpp  ppc_recomp.027.cpp  ppc_recomp.028.cpp  ppc_recomp.029.cpp  ppc_recomp.030.cpp  ppc_recomp.031.cpp  ppc_recomp.032.cpp  ppc_recomp.033.cpp  ppc_recomp.034.cpp  (+304 more)
src/rhi/: CMakeLists.txt
src/simde_wrapper/: simd_wrapper.h
src/ui/: CMakeLists.txt  achievement_menu.cpp  achievement_overlay.cpp  achievement_overlay.h  black_bar.cpp  black_bar.h  button_guide.cpp  fader.h  game_window.cpp  game_window.h  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  message_window.cpp  message_window.h  options_menu.cpp  options_menu.h
src/user/: achievement_data.cpp  achievement_data.h  achievement_manager.cpp  config.cpp  config.h  config_def.h  paths.cpp  paths.h  persistent_data.cpp  persistent_storage_manager.cpp  registry.cpp
src/vfs/: CMakeLists.txt  asset_manager.cpp  asset_types.hpp  bank_loader.cpp  bank_loader.hpp  vfs.cpp
src/xenia/: CMakeLists.txt
src/xenon/: disasm.h  image.h  xbox.h  xdbf.h
(+632 files in other folders)
